--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </HEAD>
   <BODY>
     <CENTER> <H1> LINKING </H1> </CENTER>
-    <CENTER> <A HREF = "mailto: rohanmurudkar122@gmail.com"> <img src="https://i.ibb.co/zVf1hXR/DD25-BB85-360-F-481-A-BC59-5-FB0249-D6-F88.png" width="500" height="600"> </A> </CENTER>
+    <CENTER> <A HREF = "mailto: (YourEmail)"> <img src="https://i.ibb.co/zVf1hXR/DD25-BB85-360-F-481-A-BC59-5-FB0249-D6-F88.png" width="500" height="600"> </A> </CENTER>
     
     
   </BODY>
